tests/baselines/reference/exhaustiveSwitchCheckCircularity.errors.txt
tests/cases/compiler/exhaustiveSwitchCheckCircularity.ts(14,26): error TS2345: Argument of type 'string' is not assignable to parameter of type 'never'.


==== tests/cases/compiler/exhaustiveSwitchCheckCircularity.ts (1 errors) ====
    // Repro from #47539
    
    declare function isNever(n: never): boolean;
    
    function f() {
        let foo: "aaa" | "bbb" = "aaa";
        while (true) {
            switch (foo) {
                case "aaa":
            }
            if (foo === "aaa") {
                foo = "bbb";
            }
            else if (isNever(foo)) {  // Error expected
                             ~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'never'.
                break;
            }
        }
    }
    